--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
-.App {
-  font-family: sans-serif;
-  text-align: center;
+body {
+	background: #ddd;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+		Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
